--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@ng-select/ng-select": "^9.0.0",
+    "ngx-image-compress": "^15.1.6",
     "rxjs": "~7.5.0",
     "swiper": "^10.0.4",
     "tslib": "^2.3.0",
