--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@ng-select/ng-select": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "ngx-image-compress": "^15.1.6",
     "rxjs": "~7.5.0",
     "swiper": "^10.0.4",
