--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "@ng-select/ng-select": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "ngx-image-compress": "^15.1.6",
